@startuml classes_BNet_Simulator
set namespaceSeparator none
hide empty members

' Edge tidiness: right-angle routing and extra spacing between classes.
' If ortho misplaces the arrow labels, switch it to: skinparam linetype polyline
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 70

' =========================== Core ===========================

class "Simulator" as simulator.Simulator {
  scenario : str
  buoys : list[Buoy]
  channel : Channel
  metrics : Metrics
  duration : float
  ramp_add_interval : float
  neighbor_timeout : float
  comm_range_max : float
  random_variability : float
  rnd_max_change : int
  rnd_min_buoys : int
  event_queue : list
  event_counter : int
  --
  __init__(buoys: list[Buoy], channel: Channel, metrics: Metrics, scenario: str, duration: float)
  schedule_event(time: float, event_type: EventType, target_obj: Buoy | Channel, data: Optional[dict])
  start() -> float
  handle_event(event: Event, sim_time: float)
  update_buoy_array(sim_time: float)
  calculate_avg_neighbors() -> float
}

class "Channel" as channel.Channel {
  active_transmissions : list[tuple[Beacon, float, float]]
  buoys : list[Buoy]
  metrics : Optional[Metrics]
  schedule_callback : Optional[callable]
  ideal_channel : bool
  bit_rate : int
  delivery_prob_high : float
  delivery_prob_low : float
  speed_of_light : float
  comm_range_max_sq : float
  comm_range_high_prob_sq : float
  grace_period : float
  --
  __init__(metrics: Metrics, ideal_channel: bool)
  set_buoys(buoys: list[Buoy])
  handle_event(event: Event, sim_time: float)
  update(sim_time: float)
  broadcast(beacon: Beacon, sim_time: float)
  is_busy(position: tuple[float, float], sim_time: float) -> tuple[bool, float]
}

class "Event" as events.Event {
  time : float
  event_type : EventType
  target_obj : Any
  data : dict
  --
  __init__(time: float, event_type: EventType, target_obj: Any, data: Optional[dict])
}

enum "EventType" as events.EventType {
  SCHEDULER_CHECK
  CHANNEL_SENSE
  DIFS_COMPLETION
  BACKOFF_COMPLETION
  TRANSMISSION_START
  TRANSMISSION_END
  RECEPTION
  NEIGHBOR_CLEANUP
  BUOY_MOVEMENT
  BUOY_ARRAY_UPDATE
  AVG_NEIGHBORS_CALCULATION
}

' =========================== Buoys ===========================

class "Buoy" as buoy.Buoy {
  id : int
  scheduler : BeaconScheduler
  position : tuple[float, float]
  is_mobile : bool
  velocity : tuple[float, float]
  metrics : bool
  active : bool
  state : BuoyState
  last_contact_ts : Optional[float]
  neighbors : dict[int, tuple[float, tuple[float, float]]]
  schedule_callback : Optional[callable]
  channel_is_busy : Optional[callable]
  channel_broadcast : Optional[callable]
  record_scheduler_latency_callback : Optional[callable]
  set_unique_nodes_per_buoy_callback : Optional[callable]
  log_received_callback : Optional[callable]
  cw : int
  difs_time : float
  slot_time : float
  neighbor_timeout : float
  world_width : float
  world_height : float
  rwp_speed_min : float
  rwp_speed_max : float
  rwp_pause_min : float
  rwp_pause_max : float
  rwp_pause_until : float
  rwp_dt : float
  rwp_waypoint : tuple[float, float]
  rwp_speed : float
  processing : bool
  want_to_send : bool
  scheduler_decision_time : float
  multihop_mode : str
  multihop_limit : int
  append_hop_limit : int
  discovered_nodes : dict[int, tuple[float, tuple[float, float], int]]
  pending_queue_limit : int
  pending_forward_beacons : dict[int, Beacon]
  forwarded_beacons : dict[int, float]
  --
  __init__(scheduler: BeaconScheduler, position: tuple[float, float], is_mobile: bool, velocity: tuple[float, float], metrics: bool)
  activate()
  deactivate()
  handle_event(event: Event, sim_time: float)
  create_beacon(sim_time: float) -> Beacon
  forward_beacon(original_beacon: Beacon, sim_time: float) -> Beacon
}

enum "BuoyState" as buoy.BuoyState {
  SLEEPING
  RECEIVING
  WAITING_DIFS
  BACKOFF
}

' ========================= Protocols =========================

class "Beacon" as beacon.Beacon <<dataclass>> {
  sender_id : int
  mobile : bool
  position : Tuple[float, float]
  neighbors : List[Tuple[int, float, Tuple[float, float], int]]
  timestamp : float
  origin_id : Optional[int]
  hop_limit : int
  scheduled_receivers : Set[int]
  --
  size_bits() -> int
}

class "BeaconScheduler" as scheduler.BeaconScheduler {
  scheduler_type : str
  static_interval : float
  min_interval : float
  max_interval : float
  default_velocity : float
  interval_range : float
  last_fq : float
  last_static_send_time : float
  last_dynamic_send_time : float
  next_dynamic_interval : float
  acab_contact_threshold : float
  acab_neighbors_threshold : float
  acab_weights : tuple[float, float, float]
  adab_neighbors_threshold : float
  --
  __init__(scheduler_type: str, static_interval: float, min_interval: float, max_interval: float, default_velocity: float)
  get_next_check_interval() -> float
  should_send(velocity: tuple[float, float], n_neighbors: int, last_contact_ts: float, current_time: float) -> bool
  should_send_static(current_time: float) -> bool
  should_send_dynamic(velocity: tuple[float, float], n_neighbors: int, last_contact_ts: float, current_time: float) -> bool
  compute_interval(velocity: tuple[float, float], n_neighbors: int, last_contact_ts: float, current_time: float) -> float
}

' ====================== Utils & Config =======================

class "Metrics" as metrics.Metrics {
  density : float
  scheduler_type : str
  multihop_mode : str
  world_width : float
  world_height : float
  mobile_buoy_count : int
  fixed_buoy_count : int
  simulation_duration : float
  beacons_sent : int
  beacons_forwarded : int
  beacons_received : int
  beacons_lost : int
  beacons_collided : int
  potentially_sent : int
  actually_received : int
  total_successful_receivers : int
  total_latency : float
  reaction_latency_sum : float
  reaction_latency_count : int
  scheduler_latency_sum : float
  scheduler_latency_count : int
  avg_neighbors_sum : float
  avg_neighbors_count : int
  neighbor_ratio_sum : float
  neighbor_ratio_count : int
  neighbor_delta_sum : float
  neighbor_delta_count : int
  delivered_beacons : dict[int, float]
  discovered_pairs : dict[int, set[int]]
  unique_nodes_per_buoy : dict[int, set[int]]
  time_series : list
  discovery_time_series : list
  --
  __init__(density: float, scheduler_type: str, world_width: float, world_height: float, mobile_count: int, fixed_count: int, duration: float, multihop_mode: str)
  log_sent(is_forward: bool)
  log_received(origin_id: int, timestamp: float, receive_time: float, receiver_id: int)
  log_lost(count: int)
  log_collision(count: int)
  record_scheduler_latency(latency: float)
  log_neighbor_ratio(n_neighbors: int, n_receivers: int)
  avg_neighbor_ratio() -> float
  log_neighbor_delta(n_neighbors: int, n_receivers: int)
  avg_neighbor_delta() -> float
  delivery_ratio() -> float
  packet_delivery_ratio() -> float
  avg_percentage_network_discovered() -> float
  summary(sim_time: float) -> dict[str, Any]
  export_metrics_to_csv(summary, filepath: str)
}

class "ConfigHandler" as config_handler.ConfigHandler <<singleton>> {
  {static} DEFAULT_CONFIG : dict
  --
  get(section: str, key: str) -> Any
  set(section: str, key: str, value: Any)
}

' ======================= Relationships =======================

' Direction hints (-d-, -r-, .l., ...) place the target below/right/left of
' the source, so related classes stay close and edges cross less.

' Simulator orchestrates the whole simulation
simulator.Simulator "1" o-d- "*" buoy.Buoy : manages
simulator.Simulator -d-> channel.Channel : uses
simulator.Simulator --> metrics.Metrics : tracks
simulator.Simulator .d.> events.Event : creates
simulator.Simulator ..> events.EventType : uses
simulator.Simulator ..> config_handler.ConfigHandler : reads config

' Buoy behaviour and collaborators
buoy.Buoy -d-> buoy.BuoyState : has state
buoy.Buoy -d-> scheduler.BeaconScheduler : schedules with
buoy.Buoy .d.> beacon.Beacon : creates
buoy.Buoy .l.> channel.Channel : broadcasts to
buoy.Buoy ..> metrics.Metrics : reports to
buoy.Buoy ..> config_handler.ConfigHandler : reads config

' Channel transports beacons between buoys
channel.Channel o-r- "*" buoy.Buoy : tracks
channel.Channel .d.> beacon.Beacon : transmits
channel.Channel -d-> metrics.Metrics : reports to
channel.Channel ..> config_handler.ConfigHandler : reads config

' Scheduler decides when a buoy sends
scheduler.BeaconScheduler .d.> config_handler.ConfigHandler : reads config

' Event structure
events.Event -d-> events.EventType : has
@enduml
